--- a/tailwind.css
+++ b/tailwind.css
@@ -1,16 +1,26 @@
-/* Define the ServerMono-Regular font */
+/* Define the Digitalism font */
 @font-face {
-  font-family: "ServerMono";
-  src: url("/fonts/ServerMono-Regular.otf") format("opentype");
+  font-family: "Digitalism";
+  src: url("/fonts/digitalism.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
-  font-display: swap; /* Better loading behavior */
+}
+
+@font-face {
+  font-family: "Digitalism";
+  src: url("/public/fonts/digitalism.ttf") format("ttf"),
+    url("/public/fonts/digitalism.ttf") format("ttf");
+  font-weight: normal;
+  font-style: normal;
 }
 
 @import "tailwindcss";
+
 @import "./src/css/sonner.css";
 @import "./src/css/viewerjs.css";
+
 @custom-variant dark (&:where(.dark, .dark *));
+
 @custom-variant hover {
   @media (pointer: fine) {
     &:hover {
@@ -20,11 +30,10 @@
 }
 
 @theme {
-  --font-mono: "ServerMono", ui-monospace, SFMono-Regular, Menlo, Monaco,
-    Consolas, "Liberation Mono", "Courier New", monospace;
+  --font-mono: "digitalism", ui-monospace, SFMono-Regular, Menlo, Monaco,
+    Consolas, "Liberation Mono", "Courier New", monospace; /* Updated font family */
   --breakpoint-xs: 24.5rem;
   --breakpoint-3xl: 102rem;
-}
 
   --text-xs: 0.75rem;
   --text-xs--line-height: 1rem;
