--- a/tailwind.css
+++ b/tailwind.css
@@ -14,6 +14,14 @@
   font-style: normal;
 }
 
+/* Define the Olivetti Thin font */
+@font-face {
+  font-family: "OlivettiThin";
+  src: url("/fonts/Web437_OlivettiThin_8x16.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 @import "tailwindcss";
 
 @import "./src/css/sonner.css";
@@ -30,7 +38,7 @@
 }
 
 @theme {
-  --font-mono: "ServerMono-Regular", ui-monospace, SFMono-Regular, Menlo, Monaco,
+  --font-mono: "OlivettiThin", ui-monospace, SFMono-Regular, Menlo, Monaco,
     Consolas, "Liberation Mono", "Courier New", monospace; /* Updated font family */
   --breakpoint-xs: 24.5rem;
   --breakpoint-3xl: 102rem;
